# fa2-triton-study

./: .gitignore  README.md  former_readme.md  notes.md  notes_v2.md  pyproject.toml  test.py
backward/: kernel_fa2_backward.py  kernel_v2_fa2_backward.py  ref_fa2_D_tensor.py  ref_fa2_backward.py
benchmark/: backward_benchmark.py  backward_benchmark_v2.py  forward_benchmark.py  forward_benchmark_v1.py  forward_benchmark_v2.py
forward/: kernel_fa2_forward.py  ref2_fa2_forward.py  ref_fa2_forward.py
forward_kernel/: fa2_forward.py
profiling/: backward_profiling.py  backward_v2_profiling.py  forward_profiling.py
tests/: test_backward_fa2.py  test_backward_v2.py  test_forward_fa2.py
