[project]
name = "fa2-triton-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.13"
dependencies = [
    "numpy>=2.4.6",
    "pytest>=9.0.3",
    "torch>=2.12.0",
    "triton>=3.7.0",
]

[tool.setuptools]
packages = ["forward", "backward"]